--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="../linoleum.css" />
 <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="hx-v0.7.4.min.js"></script>
+<script type="text/javascript" src="hx-1.0.0.min.js"></script>
 <script type="text/javascript" src="../js/linoleum.js"></script>
 <script type="text/javascript" src="../js/tile.js"></script>
 <style type="text/css">
