--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="../linoleum.css" />
 <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="hx-1.0.0.min.js"></script>
+<script type="text/javascript" src="hx-1.0.1.min.js"></script>
 <script type="text/javascript" src="../js/linoleum.js"></script>
 <script type="text/javascript" src="../js/tile.js"></script>
 <style type="text/css">
@@ -21,12 +21,24 @@ body {
 	border: 1px solid rgb(255,89,199);
 }
 
+#controls input[type=text] {
+	display: inline-block;
+	float: left;
+	padding: 3px;
+	margin: 6px;
+	width: 160px;
+}
+
 #controls button {
 	display: inline-block;
 	float: left;
 	padding: 5px;
 	margin: 6px;
 	width: 80px;
+}
+
+.tile.exclude {
+	visibility: hidden;
 }
 </style>
 </head>
@@ -35,6 +47,9 @@ body {
 	<div id="controls">
 		<button id="distribute">distribute</button>
 		<button id="stack">stack</button>
+		<input type="text" id="filter-input" value="1,3,5,7,9,11,13" />
+		<button id="filter">filter</button>
+		<button id="clear">clear</button>
 	</div>
 
 	<div id="container">
