--- a/test/index.html
+++ b/test/index.html
@@ -50,6 +50,7 @@ body {
 		<input type="text" id="filter-input" value="1,3,5,7,9,11,13" />
 		<button id="filter">filter</button>
 		<button id="clear">clear</button>
+		<button id="sort">sort</button>
 	</div>
 
 	<div id="container">
