--- a/test/index.html
+++ b/test/index.html
@@ -48,7 +48,7 @@ body {
 	<div id="controls">
 		<button id="distribute">distribute</button>
 		<button id="stack">stack</button>
-		<input type="text" id="filter-input" value="1,3,5,7,9,11,13,15" />
+		<input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15" />
 		<button id="filter">filter</button>
 		<button id="clear">clear</button>
 		<button id="sort">sort</button>
@@ -58,7 +58,7 @@ body {
 
 		<div class="sizer"></div>
 
-		<div class="tile">
+		<div class="tile sticky">
 			<div class="inner">
 				<div class="face front"></div>
 				<div class="face back"></div>
@@ -86,7 +86,7 @@ body {
 			</div>
 		</div>
 
-		<div class="tile">
+		<div class="tile sticky">
 			<div class="inner">
 				<div class="face front"></div>
 				<div class="face back"></div>
