--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,10 @@ body {
 	width: 80px;
 }
 
+.templates {
+	display: none;
+}
+
 .tile.exclude {
 	visibility: hidden;
 }
@@ -46,6 +50,7 @@ body {
 <body>
 
 	<div id="controls">
+		<button id="add">add</button>
 		<button id="distribute">distribute</button>
 		<input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15" />
 		<button id="filter">filter</button>
@@ -57,138 +62,9 @@ body {
 
 		<div class="sizer"></div>
 
-		<div class="tile sticky">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
+	</div>
 
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile sticky">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
-
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
+	<div class="templates">
 
 		<div class="tile">
 			<div class="inner">
