--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,7 @@
 <link rel="stylesheet" type="text/css" href="../linoleum.css" />
 <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="hx-1.0.2.min.js"></script>
-<script type="text/javascript" src="../js/linoleum.js"></script>
-<script type="text/javascript" src="../js/tile.js"></script>
+<script type="text/javascript" src="../linoleum-0.2.0.js"></script>
 <style type="text/css">
 body {
 	font-family: Arial, sans-serif;
@@ -79,11 +78,3 @@ body {
 
 </body>
 </html>
-
-
-
-
-
-
-
-
