--- a/test/index.html
+++ b/test/index.html
@@ -1,80 +1,73 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="stylesheet" type="text/css" href="../linoleum.css" />
-<script type="text/javascript" src="jquery-2.0.3.min.js"></script>
-<script type="text/javascript" src="hx-1.0.2.min.js"></script>
-<script type="text/javascript" src="../linoleum-0.2.0.js"></script>
-<style type="text/css">
-body {
-	font-family: Arial, sans-serif;
-}
-#controls {
-	color: white;
-	position: absolute;
-	left: 10%;
-	top: 30px;
-	width: 80%;
-	height: 35px;
-	border: 1px solid rgb(255,89,199);
-	z-index: 2;
-}
-
-#controls input[type=text] {
-	display: inline-block;
-	float: left;
-	padding: 3px;
-	margin: 6px;
-	width: 160px;
-}
-
-#controls button {
-	display: inline-block;
-	float: left;
-	padding: 5px;
-	margin: 6px;
-	width: 80px;
-}
-
-.templates {
-	display: none;
-}
-
-.tile.exclude {
-	visibility: hidden;
-}
-</style>
+  <!-- ============================================= -->
+  <meta name="viewport" content=
+    "width=device-width,
+    initial-scale=1,
+    minimum-scale=1.0,
+    maximum-scale=1.0,
+    user-scalable=no,
+    minimal-ui"
+  >
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>linoleum</title>
+  <!-- ============================================= -->
+  <link rel="stylesheet" type="text/css" href="../linoleum.css" />
+  <!-- ============================================= -->
+  <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+  <script src="http://cdn.bfmiv.com/hx-1.0.4.min.js"></script>
+  <!-- ============================================= -->
+  <!-- [scripts] -->
+  <!-- ============================================= -->
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 
-	<div id="controls">
-		<button id="add">add</button>
-		<button id="distribute">distribute</button>
-		<input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15" />
-		<button id="filter">filter</button>
-		<button id="clear">clear</button>
-		<button id="sort">sort</button>
-	</div>
+  <div id="controls">
+    <button id="add">add</button>
+    <button id="distribute">distribute</button>
+    <input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15" />
+    <button id="filter">filter</button>
+    <button id="clear">clear</button>
+    <button id="sort">sort</button>
+  </div>
 
-	<div id="container">
+  <div id="container">
 
-		<div class="sizer"></div>
+    <div class="sizer"></div>
 
-	</div>
+  </div>
 
-	<div class="templates">
+  <div class="templates">
 
-		<div class="tile">
-			<div class="inner">
-				<div class="face front"></div>
-				<div class="face back"></div>
-			</div>
-		</div>
+    <div class="tile">
+      <div class="inner"></div>
+    </div>
 
-	</div>
+  </div>
 
-	<script type="text/javascript" src="custom.js"></script>
+  <script src="custom.js"></script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
