--- a/dev/index.html
+++ b/dev/index.html
@@ -28,15 +28,16 @@
   <div id="controls">
     <button id="add">add</button>
     <button id="distribute">distribute</button>
-    <input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15" />
+    <input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15">
     <button id="filter">filter</button>
     <button id="clear">clear</button>
     <button id="sort">sort</button>
+    <input type="text" id="size-width">
+    <input type="text" id="size-height">
+    <button id="size">size</button>
   </div>
 
   <div id="container">
-
-    <div class="sizer"></div>
 
   </div>
 
