--- a/dev/index.html
+++ b/dev/index.html
@@ -28,13 +28,18 @@
   <div id="controls">
     <button id="add">add</button>
     <button id="distribute">distribute</button>
-    <input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15">
-    <button id="filter">filter</button>
     <button id="clear">clear</button>
     <button id="sort">sort</button>
-    <input type="text" id="size-width">
-    <input type="text" id="size-height">
+    <span class="clear"></span>
+    <button id="filter">filter</button>
+    <input type="text" id="filter-input" value="0,1,3,4,5,7,9,11,13,15">
+    <span class="clear"></span>
     <button id="size">size</button>
+    <input type="text" id="size-width" class="small">
+    <input type="text" id="size-height" class="small">
+    <span class="clear"></span>
+    <button id="remove">remove</button>
+    <input type="text" id="remove-input" value="1,3,5">
   </div>
 
   <div id="container">
